Add synchronization of local entity ids. Add tick counter for GameLogic and synchronization. Fix GuiFactionSelect. Change packets ids. Refactoring.